# redact

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ner  Dockerfile.ner-base  LICENSE  README.md  README_RUST.md  SECURITY.md  TEST_COVERAGE.md
.github/workflows/: ci.yml  ner-base.yml  prepare-release.yml  release.yml
crates/redact-api/: Cargo.toml
crates/redact-api/src/: handlers.rs  lib.rs  main.rs  models.rs  routes.rs  server.rs
crates/redact-cli/: Cargo.toml
crates/redact-cli/src/: main.rs
crates/redact-cli/tests/: cli_integration.rs
crates/redact-core/: Cargo.toml
crates/redact-core/benches/: analyzer_benchmarks.rs
crates/redact-core/src/: lib.rs
crates/redact-core/src/anonymizers/: encrypt.rs  hash.rs  mask.rs  mod.rs  registry.rs  replace.rs
crates/redact-core/src/engine/: mod.rs
crates/redact-core/src/policy/: mod.rs
crates/redact-core/src/recognizers/: mod.rs  pattern.rs  registry.rs  validation.rs
crates/redact-core/src/types/: entity.rs  mod.rs  result.rs
crates/redact-core/tests/: concurrent_operations.rs  error_scenarios.rs  integration_policy.rs  pattern_coverage.rs
crates/redact-mcp/: Cargo.toml  build.rs
crates/redact-mcp/proto/: redact.proto
crates/redact-mcp/src/: server.rs
crates/redact-ner/: Cargo.toml
crates/redact-ner/src/: lib.rs  recognizer.rs  tokenizer_wrapper.rs
crates/redact-ner/tests/: ner_e2e.rs
crates/redact-wasm/: Cargo.toml
crates/redact-wasm/src/: lib.rs
docs/benchmarks/: README.md  presidio-20260131-104908.txt  presidio-20260131-105158.txt  presidio-latency-20260131-105624.txt  presidio-throughput-20260131-105624.txt  redact-20260131-104908.txt  redact-20260131-105158.txt  redact-latency-20260131-105624.txt  redact-throughput-20260131-105624.txt  results-20260131-104908.md  results-20260131-105158.md  results-20260131-105624.md
examples/: api_client.rs  basic_usage.rs
scripts/: benchmark-comparison.sh  export_ner_model.py  update-version.sh
