[package]
name = "redact-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "REST API service for PII detection and anonymization"

[dependencies]
redact-core = { path = "../redact-core", version = "0.6.2" }
redact-ner = { path = "../redact-ner", version = "0.6.2" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "redact-api"
path = "src/main.rs"
