[package]
name = "redact-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core PII detection and anonymization engine - Presidio replacement"

[dependencies]
regex = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
aes-gcm = { workspace = true }
pbkdf2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lib]
name = "redact_core"
path = "src/lib.rs"
