[package]
name = "redact-ner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Named Entity Recognition for PII detection using ONNX Runtime"

[dependencies]
redact-core = { path = "../redact-core", version = "0.6.8" }
ort = { workspace = true }
ndarray = { workspace = true }
tokenizers = "0.20"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lib]
name = "redact_ner"
path = "src/lib.rs"
